<resources>
    <string name="app_name">CS408 Lab 3</string>
    <string name="action_settings">Settings</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="u221a">√</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="x">x</string>
    <string name="minusSign">-</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="u00f7">÷</string>
    <string name="percentSign">%</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="u00b1">±</string>
    <string name="period">.</string>
    <string name="equalsSign">=</string>
    <string name="plusSign">+</string>
</resources>
